Fixes overflows and some margins (#74) (#75)
* Fixes overflows and some margins

* Fixes prettier

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 body > iframe {
